# confluent-kafka-config

./: .gitignore  ACKNOWLEDGEMENTS.md  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
assets/: STRUCTURE.md  config_example.json  config_example.yaml  example.json  example.yaml
legacy/: cfc.py
src/: __init__.py  client_pool.py  confluent_kafka_config.py  consumer_context.py  producer_context.py  topic_context.py
src/confluent_kafka_config/: __init__.py  ckc.py  client_pool.py  consumer_context.py  packet_resolver.py  producer_context.py  registry_context.py  topic_context.py  utils.py  validation.py
