[build-system]
requires = [ "setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "confluent-kafka-config"
version = "1.1.4"
description = "Load all your confluent-kafka clients from config file."
readme = "README.md"
authors = [{ name = "Lazar Jovanovic", email = "l.jovanovic97@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: System :: Software Distribution"
]
dependencies = [
    absl-py==2.1.0
alabaster==1.0.0
annotated-types==0.7.0
anyio==4.7.0
attrs==24.3.0
avro==1.12.0
azure-core==1.32.0
azure-identity==1.19.0
azure-keyvault-keys==4.10.0
babel==2.16.0
boto3==1.35.87
botocore==1.35.87
build==1.2.2.post1
cachetools==5.5.0
cel-python==0.1.5
certifi==2024.12.14
cffi==1.17.1
charset-normalizer==3.4.0
click==8.1.8
confluent-kafka==2.6.1
cryptography==44.0.0
docutils==0.21.2
fastapi==0.115.6
fastavro==1.10.0
flake8==7.1.1
google-api-core==2.24.0
google-auth==2.37.0
google-cloud-kms==3.2.1
googleapis-common-protos==1.66.0
grpc-google-iam-v1==0.13.1
grpcio==1.68.1
grpcio-status==1.62.3
h11==0.14.0
hkdf==0.0.3
httpcore==1.0.7
httpx==0.27.2
hvac==2.3.0
idna==3.10
imagesize==1.4.1
iniconfig==2.0.0
isodate==0.7.2
jaraco.classes==3.4.0
jaraco.context==6.0.1
jaraco.functools==4.1.0
jeepney==0.8.0
Jinja2==3.1.5
jmespath==1.0.1
jsonata-python==0.5.1
jsonschema==4.23.0
jsonschema-specifications==2024.10.1
keyring==25.5.0
lark-parser==0.12.0
markdown-it-py==3.0.0
MarkupSafe==3.0.2
mccabe==0.7.0
mdurl==0.1.2
more-itertools==10.5.0
msal==1.31.1
msal-extensions==1.2.0
nh3==0.2.20
packaging==24.2
pkginfo==1.12.0
pluggy==1.5.0
portalocker==2.10.1
proto-plus==1.25.0
protobuf==4.25.5
pyasn1==0.6.1
pyasn1_modules==0.4.1
pycodestyle==2.12.1
pycparser==2.22
pydantic==2.10.4
pydantic-settings==2.7.0
pydantic_core==2.27.2
pyflakes==3.2.0
Pygments==2.18.0
PyJWT==2.10.1
pyproject_hooks==1.2.0
pyrsistent==0.20.0
pytest==8.3.4
pytest-timeout==2.3.1
python-dateutil==2.9.0.post0
python-dotenv==1.0.1
PyYAML==6.0.2
readme_renderer==44.0
referencing==0.35.1
requests==2.32.3
requests-mock==1.12.1
"requests-toolbelt==1.0.0"
"respx==0.22.0"
"rfc3986==2.0.0"
"rich==13.9.4"
"rpds-py==0.22.3"
"rsa==4.9"
"s3transfer==0.10.4"
"SecretStorage==3.3.3"
"setuptools==75.6.0"
"setuptools-scm==8.1.0"
"six==1.17.0"
"sniffio==1.3.1"
"snowballstemmer==2.2.0"
"Sphinx==8.1.3"
"sphinx-rtd-theme==3.0.2"
"sphinxcontrib-applehelp==2.0.0"
"sphinxcontrib-devhelp==2.0.0"
"sphinxcontrib-htmlhelp==2.1.0"
"sphinxcontrib-jquery==4.1"
"sphinxcontrib-jsmath==1.0.1"
"sphinxcontrib-qthelp==2.0.0"
"sphinxcontrib-serializinghtml==2.0.0"
"starlette==0.41.3"
"structlog==24.4.0"
"tink==1.10.0"
"twine==6.0.1"
"typing_extensions==4.12.2"
"urllib3==2.2.3"
"uvicorn==0.34.0"
"wheel==0.45.1"
]

[project.urls]
Homepage = "https://github.com/Aragonski97/confluent-kafka-config"
Changelog = "https://github.com/Aragonski97/confluent-kafka-config/releases"
Issues = "https://github.com/Aragonski97/confluent-kafka-config/issues"
